fix overflow issue on mediaelementjs

--- a/share/assets/css/tracker.css
+++ b/share/assets/css/tracker.css
@@ -462,3 +462,7 @@ p.pagination a {
 p.pagination a:hover {
   background: #ddd;
 }
+
+.mejs-container {
+  overflow: hidden;
+}
